; ModuleID = '/home/carl/AnghaBench/openssl/crypto/cmp/extr_cmp_asn.c_OSSL_CMP_ITAV_create.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/cmp/extr_cmp_asn.c_OSSL_CMP_ITAV_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @OSSL_CMP_ITAV_create(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %12, label %9

9:                                                ; preds = %2
  %10 = call i32* (...) @OSSL_CMP_ITAV_new()
  store i32* %10, i32** %6, align 8
  %11 = icmp eq i32* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %9, %2
  store i32* null, i32** %3, align 8
  br label %19

13:                                               ; preds = %9
  %14 = load i32*, i32** %6, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @OSSL_CMP_ITAV_set0(i32* %14, i32* %15, i32* %16)
  %18 = load i32*, i32** %6, align 8
  store i32* %18, i32** %3, align 8
  br label %19

19:                                               ; preds = %13, %12
  %20 = load i32*, i32** %3, align 8
  ret i32* %20
}

declare dso_local i32* @OSSL_CMP_ITAV_new(...) #1

declare dso_local i32 @OSSL_CMP_ITAV_set0(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
